# MagLevRepositort

./: CMakeLists.txt  README.md  main.cpp  noiseAnalyzer.cpp  plotAndWriteToCSV.cpp
MatLab-Modelling/dynamicsAndMeasurements/: MagLecMainStuffTesting.m  MaglevUKF.m  computeFieldBase.m  computeFieldCircularCurrentSheetCartesian.m  computeFieldCircularCurrentSheetPolar.m  computeFieldCircularWireCartesian.m  computeFieldCircularWirePolar.m  computeForceAndTorque.m  loadMaglevParams.m  lollaKalman.asv  lollaKalman.m  maglevSystemDynamics.m  maglevSystemMeasurements.m  maglevSystemMeausrements.m  maglev_dynamics.m  maglev_measurement.m  sigmaPoints.m
MatLab-Modelling/parametsMaggy/: parameters_maggy.m
MatLab-Modelling/unscentedKalman/: unscentedKFMain.m
include/: MPC.hpp  MagnetObserver.hpp
src/: CMakeLists.txt  MPC.cpp  MagnetObserver.cpp
submodules/qcustomplot-fetch/: CMakeLists.txt  LICENSE
